2007-02-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Handle hidden rc file on windows and show a message
	if saving options fails for any reason.

2007-02-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add version fetch and display via tooltip.

2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Make use of tooltip package to show url links. Load
	TIP index and provide tooltip titles for tip links.
	(::tkchat::ChangeColors): Removed typo.

2007-02-05  Reinhard Max  <max@suse.de>

	* tkchat.tcl (tkchat::PasteDlg): Consider both selections, PRIMARY
	and CLIPBOARD when initializing the paste dialog.
	Added a <Button-3> binding to the main chat window as another
	shortcut for the paste dialog.
	
2007-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support whois information from IRC via the bridge.

2007-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed the googlefight command and added wikipedia
	and wiktionary link commands (/wikid and /wikip)
	Thanks to Joe Decoster.

2006-12-06  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Fixed the code that finds the real location of the
	script and adds it to auto_path.

2006-11-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* askleo/askleo.tcl: Broke out the askLEO code into a sub package.
	* choosefont/*: Broke out DKFs font selection into a sub package.
	* tkchat.tcl: Support for broken out packages.

2006-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support for merged ttk widgets in Tk 8.5a6. Should
	handle 8.4, 8.4+tile 0.7 and 8.5a6 now. Some widget packing bugs
	squashed too.
	* tkchat.tcl (::tkchat::proxyfilter): Use a proxyfilter to avoid
	having to add headers to every http::geturl usage.

2006-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix retrieving history when proxy disabled.

2006-10-15  Joe Mistachkin  <joe@mistachkin.com>
