@@ -1,3 +1,12 @@
+2007-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Use the new Tcl compatible TIP index.
+
+2007-02-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: On linux Button-2 can use used for scrolling.
+	removed paste dialog binding (use menu instead).
+
 2007-02-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Handle hidden rc file on windows and show a message
